--- a/weatherstyle.css
+++ b/weatherstyle.css
@@ -1,6 +1,6 @@
-// PLEASE ENSURE THE WEB PAGE YOU ARE USING THE WIDGET ON HAS INCLUDED BOOTSTRAP.CSS STYLESHEET
+/* PLEASE ENSURE THE WEB PAGE YOU ARE USING THE WIDGET ON HAS INCLUDED BOOTSTRAP.CSS STYLESHEET */
 
-// YOU NEED TO ENSURE THE ICON URL IS CORRECT FOR THE BACKGROUND IMAGES ON LINE 242
+/* YOU NEED TO ENSURE THE ICON URL IS CORRECT FOR THE BACKGROUND IMAGE ON LINE 242 */
 
 .weather-pane {
     padding: 20px;
