--- a/weatherstyle.css
+++ b/weatherstyle.css
@@ -239,7 +239,7 @@
 /* UV INDEX ICON */
 .uv-data div {
     margin: 0 auto;
-    background-image: url(weatherimages/weathericons/uvindex.png);
+    background-image: url(weatherimages/uvindex.png);
     height: 73px;
     width: 73px;
     margin-top: 7px;
